# fermax-blue-hass

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  Makefile  README.md  credentials.example.json  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
.playwright-mcp/: page-2026-04-05T14-27-12-055Z.yml
blueprints/: fermax_cast_doorbell.yaml
custom_components/fermax_blue/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  lock.py  manifest.json  notification.py  sensor.py  services.yaml  streaming.py  strings.json  switch.py
custom_components/fermax_blue/translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json  tr.json
custom_components/fermax_blue/www/: fermax-intercom-card.js
scripts/: cli.py  extract_credentials.py  pre-push.sh  test_camera.py  test_streaming.py
tests/: conftest.py  test_api.py  test_api_new.py  test_config_flow.py  test_diagnostics.py  test_extract_credentials.py
